--- a/lang/compendium_lang/contents_items.json
+++ b/lang/compendium_lang/contents_items.json
@@ -91,7 +91,6 @@
 		{"BOOMERANG": "boomerang"},
 		{"BOWS": "bows"},
 		{"CHAKRAMS & SHURIKENS": "chakrams and shurikens"},
-		{"CHEESE & APPLES": "cheese and apples"},
 		{"CLOAKS & SHIRTS": "cloaks & clothing"},
 		{"CREAM PIE": "cream pie"},
 		{"CROSSBOW": "crossbow"},
@@ -119,9 +118,10 @@
 		{"MACES": "maces"},
 		{"MAIL & LORE BOOKS": "mail & lore books"},
 		{"MASKS & VISORS": "masks & visors"},
-		{"MEAT, FISH, & BREAD": "meat, fish, and bread"},
+		{"MEALS": "meat, fish, and bread"},
 		{"MINING PICK": "mining pick"},
 		{"MIRRORS": "mirrors"},
+		{"MORSELS": "cheese and apples"},
 		{"MYSTIC ORB": "mystic orb"},
 		{"NOISEMAKER": "noisemaker"},
 		{"OFFENSIVE POTIONS": "offensive potions"},
