--- a/lang/compendium_lang/contents_monsters.json
+++ b/lang/compendium_lang/contents_monsters.json
@@ -12,7 +12,9 @@
 		{"RAT": "rat"},
 		{"ALGERNON": "algernon"},
 		{"SPIDER": "spider"},
+		{"CRAB": "crab"},
 		{"SHELOB": "shelob"},
+		{"BUBBLES": "bubbles"},
 		{"TROLL": "troll"},
 		{"THUMPUS": "thumpus"},
 		{"SCORPION": "scorpion"},
@@ -68,8 +70,10 @@
 		{"BARATHEON": "baratheon"},
 		{"BARON HERX": "lich"},
 		{"BRAM KINDLY": "bram kindly"},
+		{"BUBBLES": "bubbles"},
 		{"COCKATRICE": "cockatrice"},
 		{"CORAL GRIMES": "coral grimes"},
+		{"CRAB": "crab"},
 		{"CRYSTAL GOLEM": "crystalgolem"},
 		{"DEMON": "demon"},
 		{"DEU DE'BREAU": "deudebreau"},
