--- a/lang/item_names.json
+++ b/lang/item_names.json
@@ -1483,6 +1483,21 @@
 		},
 		"spell_ghost_bolt": {
 			"name": "Ghostbolt"
+		},
+		"spell_slime_acid": {
+			"name": "Slime Spray (Acid)"
+		},
+		"spell_slime_water": {
+			"name": "Slime Spray (Water)"
+		},
+		"spell_slime_fire": {
+			"name": "Slime Spray (Magma)"
+		},
+		"spell_slime_tar": {
+			"name": "Slime Spray (Tar)"
+		},
+		"spell_slime_metal": {
+			"name": "Slime Spray (Metal)"
 		}
     }
 }
