* initial bugbear commit

--- a/lang/compendium_lang/contents_monsters.json
+++ b/lang/compendium_lang/contents_monsters.json
@@ -17,6 +17,7 @@
 		{"BUBBLES": "bubbles"},
 		{"TROLL": "troll"},
 		{"THUMPUS": "thumpus"},
+		{"BAT": "bat"},
 		{"SCORPION": "scorpion"},
 		{"SKRABBLAG": "skrabblag"},
 		{"SCARAB": "scarab"},
@@ -25,6 +26,7 @@
 		{"MINOTAUR": "minotaur"},		
 		{"    BEASTFOLK": "-"},
 		{"INSECTOID": "insectoid"},
+		{"BUGBEAR": "bugbear"},
 		{"KOBOLD": "kobold"},
 		{"GOATMAN": "goatman"},
 		{"GHARBAD": "gharbad"},
@@ -69,8 +71,10 @@
 		{"BAPHOMET": "devil"},
 		{"BARATHEON": "baratheon"},
 		{"BARON HERX": "lich"},
+		{"BAT": "bat"},
 		{"BRAM KINDLY": "bram kindly"},
 		{"BUBBLES": "bubbles"},
+		{"BUGBEAR": "bugbear"},
 		{"COCKATRICE": "cockatrice"},
 		{"CORAL GRIMES": "coral grimes"},
 		{"CRAB": "crab"},
