--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6480,5 +6480,11 @@ Magic Required: %d (%s)#
 6251 Open Compendium#
 6252 A nearby bat awakens!#
 6253 Some %s jump out from the %s!#
+6254 was fangoriously drained by a bat.#
+6255 gets roughhoused by a bugbear.#
+6256 bugbear#
+6257 bugbears#
+6258 strikes#
+6259 *grunt*#
 
 6300 END#
