* daedalus/bell/container compendium

--- a/lang/compendium_lang/contents_monsters.json
+++ b/lang/compendium_lang/contents_monsters.json
@@ -3,9 +3,10 @@
 	"contents": [
 		{"    HUMANOIDS": "-"},
 		{"HUMANS": "human"},
-		{"GNOME": "gnome"},
 		{"GOBLIN": "goblin"},
 		{"THE POTATO KING": "potato king"},
+		{"GNOME": "gnome"},
+		{"GNOME THIEF": "gnome thief"},
 		{"SHOPKEEPER": "shopkeeper"},
 		{"MYSTERIOUS MERCHANT": "mysterious shop"},
 		{"    BEASTS": "-"},
@@ -89,6 +90,7 @@
 		{"GHOST": "ghost"},
 		{"GHOULS": "ghoul"},
 		{"GNOME": "gnome"},
+		{"GNOME THIEF": "gnome thief"},
 		{"GOATMAN": "goatman"},
 		{"GOBLIN": "goblin"},
 		{"HUMANS": "human"},
