--- a/lang/compendium_lang/contents_world.json
+++ b/lang/compendium_lang/contents_world.json
@@ -8,6 +8,7 @@
 		{"MURKY WATER": "murky water"},
 		{"LAVA": "lava"},
 		{"PITS": "pits"},
+		{"CONTAINERS": "containers"},
 		{"BREAKABLE BARRIERS": "breakable barriers"},
 		{"    LOCATIONS": "-"},
 		{"MINEHEAD": "minehead"},
@@ -32,7 +33,9 @@
 		{"FOUNTAIN": "fountain"},
 		{"CHEST": "chest"},
 		{"GRAVESTONE": "gravestone"},
-		{"OBELISK": "obelisk"},		
+		{"DAEDALUS SHRINE": "daedalus"},
+		{"OBELISK": "obelisk"},	
+		{"BELL": "bell"},	
 		{"    TRAPS": "-"},
 		{"BOULDER TRAP": "boulder trap"},
 		{"ARROW TRAP": "arrow trap"},
@@ -61,6 +64,7 @@
 	"contents_alphabetical": [
 		{"ARCANE CITADEL": "arcane citadel"},
 		{"ARROW TRAP": "arrow trap"},
+		{"BELL": "bell"},
 		{"BOULDER TRAP": "boulder trap"},
 		{"BRAM'S CASTLE": "brams castle"},
 		{"BREAKABLE BARRIERS": "breakable barriers"},
@@ -69,7 +73,9 @@
 		{"CHEST": "chest"},
 		{"CITADEL SANCTUM": "citadel sanctum"},
 		{"COCKATRICE LAIR": "cockatrice lair"},
+		{"CONTAINERS": "containers"},
 		{"CRYSTAL CAVES": "crystal caves"},
+		{"DAEDALUS SHRINE": "daedalus"},
 		{"DOOR": "door"},
 		{"FOUNTAIN": "fountain"},
 		{"GATE": "portcullis"},
